--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.10.0",
     "dom-parser-react": "^0.3.1",
     "dompurify": "^3.2.6",
+    "dotenv": "^17.2.1",
     "framer-motion": "^12.23.6",
     "graphql": "^16.11.0",
     "graphql-request": "^7.2.0",
